# tide-protocol

./: .gitignore  CHANGELOG.md  PROTOCOL.md  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml  source-snapshot.yml
docs/: agent-adjustments.md  architecture.md  code-report.md  commit-safety.md  field-tests.md  hardgates-boundaries.md  hardgates-smart.md  install.md  live-code.md  model-policy.md  model-profiles.md  project-command-catalog.md  protocol.md  release.md  responsibility-map.md  roadmap-to-1.0.md  roadmap.md  supervisor-manual.md  supervisor-workflow.md  taiga-integration.md  taiga-safety.md
examples/: tide.commands.json
mcp/: README.md  tide_mcp.py
opencode/: opencode.tide.example.json
opencode/agents/: tide-code-report.md  tide-guide.md  tide-operator.md  tide-planner.md  tide-reviewer-data.md  tide-reviewer-durability.md  tide-reviewer-infra.md  tide-reviewer-security.md  tide-reviewer-simplicity.md  tide-reviewer-tests.md  (+5 more)
templates/: wave.md
tests/: conftest.py  test_additional_guardrails.py  test_agility.py  test_autonomy_boundary.py  test_boundary_and_policy.py  test_cli_lifecycle.py  test_commands.py  test_convergence.py  test_core.py  test_evidence_plan.py  test_git_gate.py  test_hook_entrypoint.py  test_locks.py  test_maintenance.py  test_mcp.py  test_mcp_and_setup.py  test_mcp_maintenance.py  test_mcp_model_policy_initialize.py  test_mcp_model_policy_routing.py  test_mcp_stability.py  test_model_policy.py  test_model_policy_and_locks.py  test_model_policy_setup.py  test_policy.py  test_project.py  test_refinements.py  test_review.py  test_segmented_closure.py  test_segments_and_operations.py  test_session_stability.py  test_setup.py  test_stability.py  test_state_and_resume.py  test_tide_cli.py  test_tide_cli_boundary.py  test_tide_launcher.py  test_tide_mcp.py  test_v1.py  test_validation.py
(+81 files in other folders)
